# oipromot

./: .cursorignore  .env.example  .gitignore  README.md  README_REFACTORED.md  app.db  app.db.wal  cli.py  config_check.py  core_optimizer.py  database_config.py  htmx_app.py  jwt_utils.py  logger_config.py  main.py  models.py  nginx_config_fixed.conf  oipromot.db  oipromot.db.wal  pyproject.toml  run_web.py  simple_cli.py  simple_optimizer.py  test_install.py  test_refactored_quick.py  user_manager.py  web_app.py  web_app_old.py
docs/: ai-vba-capability-balance.md  functions-list.md  model-capability-examples.md  requirement-1-tasks.md  vba-prompt-examples.md
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: index.html  login.html
oipromot/: __init__.py
oipromot/ai/: prompt_optimizer.py
oipromot/cli/: base.py  interactive.py
oipromot/core/: config.py  exceptions.py
oipromot/routes/: prompts.py
oipromot/services/: ai_service.py
src/oipromot/: app.py  config.py  deepseek_service.py  models.py  routes.py  services.py
src/oipromot/ai/: capability_analyzer.py  deepseek_client.py  prompt_optimizer.py
src/oipromot/cli/: interactive.py  simple.py
src/oipromot/core/: config.py  database.py  logging.py  models.py  repository.py
src/oipromot/routes/: __init__.py
src/oipromot/services/: __init__.py  ai_providers.py  prompt_service.py
src/oipromot/utils/: language.py
static/css/: style.css
static/js/: app.js
templates/: index.html  login.html
tests/: conftest.py  test_api.py  test_app.py  test_capability_analyzer.py  test_cli.py  test_prompt_optimizer.py
tools/: interactive_optimizer.py  prompt_optimizer.py  test_capability_balance.py  test_commands.py  test_improved.py  test_interactive.py  test_language.py  test_model_capabilities.py  test_optimizer.py  test_vba_prompts.py  user_manager.py
