[project]
name = "oipromot"
version = "0.1.0"
description = "Interactive requirement optimizer with CLI and Web interface"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.3.5",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "aiohttp>=3.9.0",
    "httpx[socks]>=0.24.0",
]

[project.scripts]
simple-cli = "simple_cli:cli_main"
web-app = "run_web:main"
test-install = "test_install:main"
config-check = "config_check:config_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "templates/**/*",
    "static/**/*",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88
